Mobile css adjustments and login settings

--- a/apps/customers/static/css/app.css
+++ b/apps/customers/static/css/app.css
@@ -42,36 +42,10 @@ nav #complement-title {
   /* font-size: 19px; */
 }
 
-.card .card-title {
-  font-size: 15px;
-}
-
-.chart-box {
-  margin-top: 30px !important;
-}
-
-.flat-row {
-  margin-bottom: inherit;
-  line-height: 1;
-}
-
-.card-blue {
-  background-color: #4ab2e3;
-  border-top: .5rem solid #4ab2e3;
-}
-
-.card-green {
-  border-top: .5rem solid #4ae387;
-}
-
 body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-}
-
-.chart-box {
-  margin-top: 50px;
 }
 
 .content {
@@ -94,4 +68,13 @@ footer.page-footer {
 
 footer {
   bottom: 1px;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .form-box {
+    margin-top: 12%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
