--- a/apps/customers/templates/auth/login.html
+++ b/apps/customers/templates/auth/login.html
@@ -24,7 +24,7 @@
           <button class="btn center" type="submit">Login</button>
         </div>
         <div class="col s6">
-          <a class="vs-red" href="#">Esqueci a senha</a>
+          <a class="vs-red" href="{% url 'forgot-password' %}">Esqueci a senha</a>
         </div>
       </div>
     </form>
