--- a/apps/dashboard/templates/components/base.html
+++ b/apps/dashboard/templates/components/base.html
@@ -14,9 +14,9 @@
   <script src="https://code.highcharts.com/modules/series-label.js"></script>
   <script src="https://code.highcharts.com/modules/exporting.js"></script>
   <script src="https://code.highcharts.com/modules/export-data.js"></script>
-  <link rel="stylesheet" href="{% static 'css/dash/home.css' %}" media="screen">
-  <link rel="stylesheet" href="{% static 'css/dash/base.css' %}" media="screen">
-  <link rel="stylesheet" href="{% static 'css/home/chart.css' %}" media="screen">
+  <link rel="stylesheet" href="{% static 'css/dashboard/base.css' %}" media="screen">
+  {% block extra_head %}
+  {% endblock %}
   <title>CanionLabs - MES</title>
 </head>
 <body>
