decrease y-axis margin - header chart/home

--- a/apps/dashboard/templates/home.html
+++ b/apps/dashboard/templates/home.html
@@ -50,8 +50,8 @@ Highcharts.chart('home-chart', {
         text: 'Gráfico da Produção do Dia'
     },
     yAxis: {
-        maxPadding: 0.05,
-        title: {text: null}
+        maxPadding: 0,
+        title: {text: null},
     },
     legend: {
         layout: 'vertical',
