apply light theme and add cards

--- a/apps/dashboard/templates/home.html
+++ b/apps/dashboard/templates/home.html
@@ -7,49 +7,38 @@
 
 {% block content %}
 <div class="home-content">
-  <br>
-  <div class="row valign-wrapper">
-    <div class="col s4">
-      <table class="bordered striped centered">
-        <tbody>
-          <tr>
-            <td>Maior Produção da Semana</td>
-            <td>Tipo A - 133.400</td>
-          </tr>
-          <tr>
-            <td>Maior Produção do Dia</td>
-            <td>Tipo C - 12.000</td>
-          </tr>
-        </tbody>
-      </table>
+  <div class="flat-row row ">
+    <div class="col m3 center chart-box">
+      <div class="card card-blue">
+        <div class="card-content white-text">
+          <span class="card-title">PRODUÇÃO TOTAL DE HOJE</span>
+          <p>Tipo A</p>
+        </div>
+      </div>
     </div>
-    <div class="col s4">
-      <table class="bordered striped centered">
-        <tbody>
-          <tr>
-            <td>Maior Produção da Semana</td>
-            <td>Tipo A - 133.400</td>
-          </tr>
-          <tr>
-            <td>Maior Produção do Dia</td>
-            <td>Tipo C - 12.000</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="col m3 center chart-box">
+      <div class="card card-green">
+        <div class="card-content grey-text text-darken-2">
+          <span class="card-title">MAIOR PRODUÇÃO DA SEMANA</span>
+          <p>Tipo B</p>
+        </div>
+      </div>
     </div>
-    <div class="col s4">
-      <table class="bordered striped centered">
-        <tbody>
-          <tr>
-            <td>Maior Produção da Semana</td>
-            <td>Tipo A - 133.400</td>
-          </tr>
-          <tr>
-            <td>Maior Produção do Dia</td>
-            <td>Tipo C - 12.000</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="col m3 center chart-box">
+      <div class="card card-blue">
+        <div class="card-content white-text">
+          <span class="card-title">PRODUÇÃO TOTAL SEMANAL</span>
+          <p>133.334</p>
+        </div>
+      </div>
+    </div>
+    <div class="col m3 center chart-box">
+      <div class="card card-green">
+        <div class="card-content grey-text text-darken-2">
+          <span class="card-title">INICIO DA PRODUÇÃO DIÁRIA</span>
+          <p>08:30:45</p>
+        </div>
+      </div>
     </div>
   </div>
   <!-- <hr> -->
