--- a/apps/dashboard/static/css/dashboard/home.css
+++ b/apps/dashboard/static/css/dashboard/home.css
@@ -1,12 +1,21 @@
-#home-chart {
-	min-width: 100vw;
-	max-width: 100vw;
-	height: 40vh;
-	margin: 0 auto
+.card .card-title {
+  font-size: 15px;
 }
 
-.bordered-left {
-	/* border-left-color: red; */
-	border-left-style: solid;
-	border-width: 1px;
+.chart-box {
+  margin-top: 10px !important;
+}
+
+.flat-row {
+  margin-bottom: auto;
+  line-height: 1;
+}
+
+.card-blue {
+  background-color: #4ab2e3;
+  border-top: .5rem solid #4ab2e3;
+}
+
+.card-green {
+  border-top: .5rem solid #4ae387;
 }
