--- a/apps/dashboard/static/css/dashboard/home.css
+++ b/apps/dashboard/static/css/dashboard/home.css
@@ -19,3 +19,10 @@
 .card-green {
   border-top: .5rem solid #4ae387;
 }
+
+
+@media only screen and (max-width: 768px) {
+	.chart-box {
+	  margin-top: 20px !important;
+	}
+}
