--- a/apps/dashboard/templates/home.html
+++ b/apps/dashboard/templates/home.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="home-content">
   <div class="flat-row row ">
-    <div class="col m3 center chart-box">
+    <div class="col s12 m3 center chart-box">
       <div class="card card-blue">
         <div class="card-content white-text">
           <span class="card-title">PRODUÇÃO TOTAL DE HOJE</span>
@@ -16,7 +16,7 @@
         </div>
       </div>
     </div>
-    <div class="col m3 center chart-box">
+    <div class="col s12 m3 center chart-box">
       <div class="card card-green">
         <div class="card-content grey-text text-darken-2">
           <span class="card-title">MAIOR PRODUÇÃO DA SEMANA</span>
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <div class="col m3 center chart-box">
+    <div class="col s12 m3 center chart-box">
       <div class="card card-blue">
         <div class="card-content white-text">
           <span class="card-title">PRODUÇÃO TOTAL SEMANAL</span>
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div class="col m3 center chart-box">
+    <div class="col s12 m3 center chart-box">
       <div class="card card-green">
         <div class="card-content grey-text text-darken-2">
           <span class="card-title">INICIO DA PRODUÇÃO DIÁRIA</span>
