--- a/apps/dashboard/templates/components/base.html
+++ b/apps/dashboard/templates/components/base.html
@@ -29,7 +29,7 @@
         <li><a style="display: block" href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a></li>
       </ul>
       <ul class="right">
-        <li><span class="light-text">Bem vindo, Caio Víctor</span></li>
+        <li><span class="light-text hide-on-small-only">Bem vindo, Caio Víctor</span></li>
         <li class="custom-left-border"><a class="dropdown-button" href="#!" data-activates="dropdown1" data-beloworigin="true"><i class="material-icons">arrow_drop_down</i></a></li>
       </ul>
     </div>
