--- a/apps/dashboard/templates/home.html
+++ b/apps/dashboard/templates/home.html
@@ -7,8 +7,9 @@
 
 {% block content %}
 <div class="home-content">
+  <div id="mobile-indicator"></div>
   <div class="flat-row row ">
-    <div class="col s12 m3 center chart-box">
+    <div class="col s12 m6 l3 center chart-box">
       <div class="card card-blue">
         <div class="card-content white-text">
           <span class="card-title">PRODUÇÃO TOTAL DE HOJE</span>
@@ -16,7 +17,7 @@
         </div>
       </div>
     </div>
-    <div class="col s12 m3 center chart-box">
+    <div class="col s12 m6 l3 center chart-box">
       <div class="card card-green">
         <div class="card-content grey-text text-darken-2">
           <span class="card-title">MAIOR PRODUÇÃO DA SEMANA</span>
@@ -24,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div class="col s12 m3 center chart-box">
+    <div class="col s12 m6 l3 center chart-box">
       <div class="card card-blue">
         <div class="card-content white-text">
           <span class="card-title">PRODUÇÃO TOTAL SEMANAL</span>
@@ -32,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="col s12 m3 center chart-box">
+    <div class="col s12 m6 l3 center chart-box">
       <div class="card card-green">
         <div class="card-content grey-text text-darken-2">
           <span class="card-title">INICIO DA PRODUÇÃO DIÁRIA</span>
@@ -42,15 +43,16 @@
     </div>
   </div>
   <!-- <hr> -->
+  <br class="show-on-small">
   <div class="row">
     <div id="chart-general-diary"></div>
   </div>
   <!-- <hr> -->
-  <div class="row valign-wrapper">
-    <div class="col s6">
+  <div class="row">
+    <div class="col s12 m6 l6">
       <div id="chart-general-week"></div>
     </div>
-    <div class="col s6">
+    <div class="col s12 m6 l6">
       <div id="chart-general-monthly"></div>
     </div>
   </div>
@@ -355,6 +357,9 @@ Highcharts.chart('chart-general-week', {
         }
     },
   });
+  if (isMobileWidth) {
+    $('.undefined').hide();
+  }
 </script>
 
 {% endblock %}
