Creating property total_production and most_produced - model Device

--- a/apps/dashboard/templates/components/base.html
+++ b/apps/dashboard/templates/components/base.html
@@ -24,7 +24,7 @@
 
   <nav>
     <div class="nav-wrapper">
-      <a class="brand-logo left">AUTOPOLAR <span id="complement-title">MES</span></a>
+      <a class="brand-logo left">CanionLabs <span id="complement-title">MES</span></a>
       <ul class="left">
         <li><a style="display: block" href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a></li>
       </ul>
